external/qt-everywhere-opensource-src-5.8.0/qtscript/tests/auto/qscriptengine/script/com/trolltech/syntaxerror/__init__.js
function () {
}

0 = 1;

